UI spacing fixes in Contact Us

--- a/pages/contactUs/contactUs.css
+++ b/pages/contactUs/contactUs.css
@@ -1,17 +1,12 @@
-
-
 .contactSection {
   width: 100%;
-  padding-top: 0; 
-  padding-inline: 6%;
-  padding-bottom: 6%;
+  padding-inline: var(--padding-inline);
+
   background: #faf7f2;
   max-width: var(--max-width);
   margin-inline: auto;
-  padding-inline: auto;
-
+  padding-bottom: 100px;
 }
-
 
 .sectionTitle {
   text-align: center;
@@ -30,7 +25,6 @@
   color: #666;
 }
 
-
 .contactContainer {
   max-width: 1200px;
   margin: auto;
@@ -39,13 +33,11 @@
   gap: 50px;
 }
 
-
 .contactInfo {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 22px;
 }
-
 
 .infoCard {
   background: #fff;
@@ -54,9 +46,8 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.06);
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.06);
 }
-
 
 .infoCardImg {
   width: 42px;
@@ -65,7 +56,6 @@
   background: #fdeaea;
   border-radius: 50%;
 }
-
 
 .infoCard h3 {
   font-size: 16px;
@@ -78,13 +68,12 @@
   color: #555;
 }
 
-
 .map {
   grid-column: span 2;
   height: 260px;
   border-radius: 16px;
   overflow: hidden;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.08);
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
 }
 
 .map iframe {
@@ -93,14 +82,11 @@
   border: 0;
 }
 
-
-  
-
 .contactForm {
   background: #fff;
   padding: 45px;
   border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
 }
 
 .contactForm h2 {
@@ -109,29 +95,19 @@
   margin-bottom: 25px;
 }
 
-
 .inputGroup {
   position: relative;
   margin-bottom: 18px;
 }
 
-
 .inputIconImg {
-  /* position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translateY(-50%);
-  width: 18px;
-  height: 18px;
-  opacity: 0.6; */
   position: absolute;
-  top: 12px; /* lartësia që ikonës */
+  top: 12px;
   left: 12px;
   width: 20px;
   height: 20px;
-  opacity: 0.6; 
+  opacity: 0.6;
 }
-
 
 .inputGroup input,
 .inputGroup textarea {
@@ -144,10 +120,8 @@
 }
 
 .inputGroup textarea {
-  /* height: 130px;
-  resize: none; */
-   width: 100%;
-  padding: 12px 12px 12px 45px; /* lart, djathtas, poshtë, majtas */
+  width: 100%;
+  padding: 12px 12px 12px 45px;
   border-radius: 8px;
   border: 1px solid #ccc;
   outline: none;
@@ -156,14 +130,12 @@
   height: 120px;
 }
 
-
 .error {
   display: block;
   font-size: 13px;
   color: #c00000;
   margin-bottom: 10px;
 }
-
 
 .contactForm button {
   width: 100%;
@@ -181,7 +153,6 @@
   background: #a30000;
 }
 
-
 @media (max-width: 900px) {
   .contactContainer {
     grid-template-columns: 1fr;
@@ -195,4 +166,3 @@
     grid-column: span 1;
   }
 }
-
